--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Karla', sans-serif;
+    background-color: #1b1b2e;
+    color: white;
 }
 
 button:focus {
@@ -23,6 +25,7 @@ button:focus {
     /* padding: 10px; */
 }
 
+/* SIDEBAR AREA */
 .sidebar {
     width: 20%;
     height: 100vh;
@@ -39,18 +42,20 @@ button:focus {
 }
 
 .sidebar--header > h3 {
-    font-size: 1.75rem;
+    font-size: 2.5rem;
 }
 
+
+/* NOTES */
 .new-note {
     cursor: pointer;
     background-color: #4A4E74;
     border: none;
     color: white;
     border-radius: 3px;
-    height: 30px;
-    width: 30px;
-}
+    height: 40px;
+    width: 40px;
+} 
 
 .first-note {
     cursor: pointer;
@@ -61,9 +66,12 @@ button:focus {
     padding: 1rem;
 }
 
+
+/*  EDITOR */
 .editor {
     width: 80%;
     height: 100vh;
+    background-color: #1b1b2e;
 }
 
 .title {
@@ -92,13 +100,14 @@ button:focus {
 
 .text-snippet {
     padding-inline: 5px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.2rem;
-    color: #4A4E74;
+    color: white;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding-left: 1.3rem;
 }
 
 .selected-note {
@@ -129,6 +138,7 @@ button:focus {
     display: flex;
 }
 
+/* NO NOTES BUTTON */
 .no-notes {
     width: 100%;
     height: 100vh;
@@ -151,6 +161,8 @@ button:focus {
 
 .trash-icon {
     cursor: pointer;
+    color: white;
+    margin-right: 1rem;
 }
 
  .gg-trash {
