--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ button:focus {
     /* padding: 10px; */
 }
 
+
+
+
 /* SIDEBAR AREA */
 .sidebar {
     width: 20%;
@@ -67,7 +70,13 @@ button:focus {
 }
 
 
-/*  EDITOR */
+/* EDITOR AREA */
+.mde-header {
+    height: 4rem;
+    align-items: center;
+}
+
+
 .editor {
     width: 80%;
     height: 100vh;
@@ -119,20 +128,20 @@ button:focus {
     font-weight: 700;
 }
 
-.gutter {
+/* .gutter {
     background-color: #eee;
 
     background-repeat: no-repeat;
     background-position: 50%;
-}
+} */
 
-.gutter.gutter-horizontal {
+/* .gutter.gutter-horizontal {
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
 }
 
 .gutter.gutter-horizontal:hover {
     cursor: col-resize;
-}
+} */
 
 .split {
     display: flex;
